[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/PlayerPowerUp2.gd" type="Script" id=1]
[ext_resource path="res://Cenas/Projectile.tscn" type="PackedScene" id=2]

[node name="PlayerPowerUp2" type="Node2D"]
script = ExtResource( 1 )
proj = ExtResource( 2 )

[node name="PowerUp2Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShooterTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="PowerUp2Timer" to="." method="_on_PowerUp2Timer_timeout"]
[connection signal="timeout" from="ShooterTimer" to="." method="_on_ShooterTimer_timeout"]
